--- a/gateway/index.html
+++ b/gateway/index.html
@@ -66,7 +66,7 @@
 					title: 'Temperature over the last 24 hours',
 					xlabel: 'Time',
 					ylabel: 'Temperature [F]',
-				    rollPeriod: 7,
+				    rollPeriod: 1,
 				    showRoller: false,
 					axes: {
 						x: {
@@ -75,7 +75,8 @@
 						},
 						y: {
 							drawAxis: true, 
-							drawGrid: true
+							drawGrid: true,
+							valueRange: [60, null]
 						}
 					}
 				}
