Different temperature readout system

--- a/gateway/index.html
+++ b/gateway/index.html
@@ -76,7 +76,7 @@
 						y: {
 							drawAxis: true, 
 							drawGrid: true,
-							valueRange: [60, null]
+							valueRange: [50, 90]
 						}
 					}
 				}
