Blink temperature when readout is requested

--- a/gateway/index.html
+++ b/gateway/index.html
@@ -49,6 +49,7 @@
 		$(this).removeClass('active');
       });
 	  $('#temp').click(function(){
+             $('#tempreadout').text('');
 	     socket.emit('readtemp');
 		 $(this).removeClass('active');
 	  });
